# CourseDjango6

./: pyproject.toml
frontend_react/src/utils/: axiosInstance.js
skymarket/ads/: models.py  pirmissions.py  serializers.py  urls.py  views.py
skymarket/ads/migrations/: 0001_initial.py
skymarket/skymarket/: settings.py  urls.py
skymarket/users/: admin.py  email.py  managers.py  models.py  serializers.py  urls.py
skymarket/users/management/commands/: loadall.py
skymarket/users/migrations/: 0001_initial.py
